Add more info to README and start script